---
source: src/codegen/tests/debug_tests.rs
expression: codegen
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@a = global ptr null, !dbg !0
@b = global ptr null, !dbg !6
@llvm.global_ctors = appending global [1 x { i32, ptr, ptr }] [{ i32, ptr, ptr } { i32 65535, ptr @__unit___internal___[ctor-hash]__ctor, ptr null }]

define void @__global_a__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  ret void
}

define void @__global_b___ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  ret void
}

define void @__global_b__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  ret void
}

define void @__unit___internal___[ctor-hash]__ctor() {
entry:
  call void @__global_a__ctor(ptr @a)
  call void @__global_b__ctor(ptr @b)
  ret void
}

!llvm.module.flags = !{!13, !14}
!llvm.dbg.cu = !{!15}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "a", scope: !2, file: !2, line: 3, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "<internal>", directory: "")
!3 = !DIDerivedType(tag: DW_TAG_typedef, name: "__REF_TO____global_a", scope: !2, file: !2, baseType: !4, align [filtered])
!4 = !DIDerivedType(tag: DW_TAG_pointer_type, name: "__global_a", baseType: !5, size: 64, align [filtered], dwarfAddressSpace: 1)
!5 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!6 = !DIGlobalVariableExpression(var: !7, expr: !DIExpression())
!7 = distinct !DIGlobalVariable(name: "b", scope: !2, file: !2, line: 4, type: !8, isLocal: false, isDefinition: true)
!8 = !DIDerivedType(tag: DW_TAG_typedef, name: "__REF_TO____global_b", scope: !2, file: !2, baseType: !9, align [filtered])
!9 = !DIDerivedType(tag: DW_TAG_pointer_type, name: "__global_b", baseType: !10, size: 64, align [filtered], dwarfAddressSpace: 1)
!10 = !DICompositeType(tag: DW_TAG_array_type, baseType: !5, size: 352, align [filtered], elements: !11)
!11 = !{!12}
!12 = !DISubrange(count: 11, lowerBound: 0)
!13 = !{i32 2, !"Dwarf Version", i32 5}
!14 = !{i32 2, !"Debug Info Version", i32 3}
!15 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !16, splitDebugInlining: false)
!16 = !{!0, !6}
